force-app/main/default/objects/Invoice__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <formula>IF(Amount_Paid__c =  Rent_Amount__c, &quot;Paid in Full&quot;,
IF(AND(Amount_Paid__c &lt; Rent_Amount__c, Amount_Paid__c &gt; 0), &quot;Partial Payment&quot;,
IF(Amount_Paid__c = 0, &quot;Not Paid&quot;, &quot;Payment Exceeds Amount Due&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>