force-app/main/default/objects/Invoice__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <label>Tenant</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Tenant does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Tenant</value>
        </filterItems>
        <infoMessage>Please select the tenant related to this invoice.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>