force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tenant__c</columns>
    <columns>Rent_Amount__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Payment_Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>