force-app/main/default/objects/Invoice__c/listViews/Paid_Invoices.listView-meta.xml
<ListView>
    <fullName>Paid_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Tenant__c</columns>
    <columns>Amount_Paid__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Paid in Full</value>
    </filters>
    <label>Paid Invoices</label>
</ListView>